Revert "Fix HCRLateAttachWorkload_previewEnabled failure on jdk17"